website/websites/gp4/code/recursive-gcj.log
BUILD COMMANDS FOR: recursive.gcj

Sun Sep 24 20:04:00 PDT 2006

/usr/bin/gcj -x java -O3 -fomit-frame-pointer -march=pentium4 -msse2  -fno-bounds-check -o recursive.gcj_run --main=recursive recursive.javagcj
recursive.javagcj: In class 'recursive':
recursive.javagcj: In method 'recursive.main(java.lang.String[])':
recursive.javagcj:16: error: Can't find method 'printf(Ljava/lang/String;II)' in type 'java.io.PrintStream'.
    System.out.printf("Ack(3,%d): %d\n", n, ack(3, n));
                 ^
recursive.javagcj:17: error: Can't find method 'printf(Ljava/lang/String;DD)' in type 'java.io.PrintStream'.
    System.out.printf("Fib(%.1f): %.1f\n", 27.0 + n, fib(27.0 + n));
                 ^
recursive.javagcj:20: error: Can't find method 'printf(Ljava/lang/String;IIII)' in type 'java.io.PrintStream'.
    System.out.printf("Tak(%d,%d,%d): %d\n", n * 3, n * 2, n, tak(n * 3, n * 2, n));
                 ^
recursive.javagcj:22: error: Can't find method 'printf(Ljava/lang/String;I)' in type 'java.io.PrintStream'.
    System.out.printf("Fib(3): %d\n", fib(3));
                 ^
recursive.javagcj:23: error: Can't find method 'printf(Ljava/lang/String;D)' in type 'java.io.PrintStream'.
    System.out.printf("Tak(3.0,2.0,1.0): %.1f\n", tak(3.0, 2.0, 1.0));
                 ^
5 errors
make[3]: [recursive.gcj_run] Error 1 (ignored)
rm recursive.javagcj

=================================================================
COMMAND LINE (%A is single numeric argument):

recursive.gcj_run %A
Error, could not exec recursive.gcj_run 3 (No such file or directory)
PATH=/home/dunham/gp4/shootout/bench/recursive:/home/dunham/gp4/shootout/bench/recursive/tmp:/usr/local/bin:/usr/bin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.1.1:/opt/ghc/bin:/usr/kde/3.5/bin:/usr/qt/3/bin:/opt/cint5.16:/opt/kroc-1.4.0/install/bin:/opt/dmd/bin:/opt/sun-jdk-1.5.0.08/bin:/opt/ibm-jdk-bin-1.5.0.2/bin:/opt/sun-jdk-1.4.2.12/bin:/opt/mozart/bin:/opt/groovy-1.0-JSR-06/bin
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
